Chapter 09/deployment.yaml
apiVersion: apps/v1
kind: Deployment       
metadata:
  name: nginx
spec:
  replicas: 10
  strategy:
    type: RollingUpdate 
    rollingUpdate: 
      maxSurge: 3
      maxUnavailable: 2 
  containers:
  - name: nginx
    image: nginx:1.21.1 # new image
