Chapter 09/pod.yaml
apiVersion: v1 
kind: Pod
metadata:
  name: my-nginx
  labels: 
    app: nginx
spec:
  containers:
  - name: my-nginx
    image: nginx
