Chapter 09/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: nginx-service 
spec:
  ports:
  - port: 80  
  selector:
    app: nginx
