Chapter 09/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress   
spec:
  rules:
  - host: my.app.com
    http:
      paths:
      - pathType: Prefix 
        path: "/"
        backend:
          service: 
            name: nginx-service
            port:
              number: 80
